# prism-web-server

./: .gitignore  .ruby-version  .syntastic_c_config  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.am  README.md  astyle.cfg  autogen.sh  cmake-build.sh  config.h.in  configure.ac  install-cmake.sh  install-libuv.sh  server.json.sample  valgrind.supp
cmake/: FindLibUV.cmake
docs/: .gitignore  CMakeLists.txt  Doxyfile.in
install-scripts/: install-bison.sh  install-libuv.sh  install-nghttp2.sh
src/: CMakeLists.txt  Makefile.am  backend.c  backend.h  blocking_queue.c  blocking_queue.h  check_blocking_queue.c  check_priority_queue.c  circular_buffer.c  circular_buffer.h  client.c  client.h  daemon.c  daemon.h  generate_huffman_decoding_table.rb  generate_huffman_encoding_table.rb  generate_huffman_table.rb  hash_table.c  hash_table.h  hpack.c  hpack.h  http.c  http.h  huffman.c  huffman.h  huffman_data.c  huffman_decoder_data.c  huffman_encoder_data.c  huffman_responses.txt  logo.h  main.c  multimap.c  multimap.h  plugin.c  plugin.h  plugin_callbacks.h  priority_queue.c  priority_queue.h  request.c  request.h  (+12 more)
src/backends/: Makefile.am
src/backends/debug/: Makefile.am  main.c
src/backends/files/: Makefile.am  main.c
src/hpack/: CMakeLists.txt  Makefile.am  check_hpack.c  circular_buffer.c  circular_buffer.h  header_list.c  header_list.h  hpack.c  hpack.h
src/http/: CMakeLists.txt  Makefile.am  check_request.c  http.c  http.h  request.c  request.h  response.c
src/http/h1_1/: CMakeLists.txt  Makefile.am  h1_1.c  h1_1.h  http_parser.c  http_parser.h
src/http/h2/: .gitignore  CMakeLists.txt  Makefile.am  check_h2.c  check_h2_frame.c  h2.c  h2.h  h2_error.c  h2_error.h  h2_frame.c  h2_frame.h  h2_setting.h  h2_test_cmd.c  h2_test_cmd.h  h2_test_cmd_parser.y  h2_test_cmd_scanner.l
src/http/h2/tests/: 1.in  adjust_header_table_size.test  get_with_invalid_priority.test  get_with_priority.test  invalid_rst_stream.test  multiple_requests.test  ping.test  post_with_padding.test  send_data_with_push_promise.test  send_push_promise.test  send_push_promise_before_settings_ack.test  settings_handshake.test  should_expect_continuation.test  simple_get.test  simple_post.test  unknown_frame.test
src/http2/: Makefile.am  check_hash_table.c  check_request.c  gzip.c  gzip.h  hash_table.c  hash_table.h  http.c  http.h  request.c  request.h  response.c  response.h
src/huffman/: CMakeLists.txt  Makefile.am  check_huffman.c  generate_huffman_decoding_table.rb  huffman.c  huffman.h  huffman.txt  huffman_decoder_data.c  huffman_encoder_data.c  main.c
src/plugins/: CMakeLists.txt  Makefile.am
src/plugins/debug/: CMakeLists.txt  Makefile.am  main.c
src/plugins/files/: CMakeLists.txt  Makefile.am  main.c
src/plugins/framer/: CMakeLists.txt  Makefile.am  main.c
src/util/: CMakeLists.txt  Makefile.am  atomic_int.c  atomic_int.h  base64url.c  base64url.h  binary_buffer.c  binary_buffer.h  blocking_queue.c  blocking_queue.h  check_base64url.c  check_binary_buffer.c  check_blocking_queue.c  check_hash_table.c  check_multimap.c  check_priority_queue.c  check_util.c  hash_table.c  hash_table.h  log.c  log.h  multimap.c  multimap.h  priority_queue.c  util.c  util.h
test/: CMakeLists.txt  h1_1.rb  harness.rb  nghttp.rb  ruby_http.rb  server.rb
test/fixtures/: gophertiles.html
tests/: Makefile.am  check_hpack.c  check_huffman.c  check_priority_queue.c  check_request.c  check_util.c
