TESTS = check_hpack check_huffman check_util check_request check_priority_queue
check_PROGRAMS = check_hpack check_huffman check_util check_request check_priority_queue

check_hpack_SOURCES = check_hpack.c
check_hpack_CFLAGS = @CHECK_CFLAGS@
check_hpack_LDADD = @CHECK_LIBS@

check_huffman_SOURCES = check_huffman.c
check_huffman_CFLAGS = @CHECK_CFLAGS@
check_huffman_LDADD = @CHECK_LIBS@

check_util_SOURCES = check_util.c
check_util_CFLAGS = @CHECK_CFLAGS@
check_util_LDADD = @CHECK_LIBS@

check_request_SOURCES = check_request.c
check_request_CFLAGS = @CHECK_CFLAGS@
check_request_LDADD = @CHECK_LIBS@

check_priority_queue_SOURCES = check_priority_queue.c
check_priority_queue_CFLAGS = @CHECK_CFLAGS@
check_priority_queue_LDADD = @CHECK_LIBS@
